View Issue Details

IDProjectCategoryView StatusLast Update
0031850CommunityOCCT:Modeling Algorithmspublic2020-12-02 17:13
ReporterVico Liang Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.4.0 
Target Version7.5.0Fixed in Version7.5.0 
Summary0031850: Modeling Algorithms - boolean cut and common generate unexpected result
DescriptionThe upload model boolean-common-cut-fails.brep has two shapes. The result is unexpected for common and cut.

The red shape cut the blue shape, the result is in picture cutresult.png.
The common result is empty.
Steps To Reproducetest bugs modalg_7 bug31850_1
test bugs modalg_7 bug31850_2
TagsNo tags attached.
Test case numberbugs/modalg_7/bug31850_1,bug31850_2

Attached Files

  • boolean-common-cut-fails.brep (817,512 bytes)
  • twoshapes.png (36,676 bytes)
  • cutresult.png (18,928 bytes)

Relationships

child of 0029807 closedbugmaster Open CASCADE [Regression to 7.0.0] Impossible to cut cone from prism 

Activities

Vico Liang

2020-10-13 18:10

developer  

boolean-common-cut-fails.brep (817,512 bytes)

Vico Liang

2020-10-13 18:11

developer  

twoshapes.png (36,676 bytes)

Vico Liang

2020-10-13 18:11

developer  

cutresult.png (18,928 bytes)

git

2020-10-14 09:24

administrator   ~0095948

Branch CR31850 has been created by emv.

SHA-1: 29ad05a657aeb4d1a3d0ac182ce0dcebf893da7c


Detailed log of new commits:

Author: emv
Date: Wed Oct 14 09:26:29 2020 +0300

    0031850: Modeling Algorithms - boolean cut and common generate unexpected result
    
    IntPatch_WLineTool::JoinWLines(): using correct point for the check if WLines may be joined.

Vico Liang

2020-10-14 09:50

developer   ~0095951

Could publish this patch to version 7.5.0?

emv

2020-10-14 12:59

developer   ~0095970

Dear Mikhail, could you please review the git branch CR31850?
Test results - http://jenkins-test-12.nnov.opencascade.com/view/CR31850-master-emv/view/COMPARE/

msv

2020-10-14 15:12

developer   ~0095976

For integration:
occt - CR31850
products - none

bugmaster

2020-10-17 13:22

administrator   ~0096034

Combination -
OCCT branch : IR-2020-10-16
master SHA - ae9f4b64cacf0df612944b3694a3bdfa5f1f29cf
a206de37fbfa0bf71bd534ae47192bbec23b8522
Products branch : IR-2020-10-16 SHA - fcb5abe005e152f7f923f4cf6c02acb07c027cdc
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 18027.820000000127 / 18057.130000000117 [-0.16%]
Products
Total CPU difference: 12174.330000000093 / 12182.170000000115 [-0.06%]
Windows-64-VC14:
OCCT
Total CPU difference: 19740.03125 / 19746.828125 [-0.03%]
Products
Total CPU difference: 13564.71875 / 13586.625 [-0.16%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2020-10-24 12:41

administrator   ~0096224

Branch CR31850 has been deleted by inv.

SHA-1: 29ad05a657aeb4d1a3d0ac182ce0dcebf893da7c

Related Changesets

occt: master 870ae593

2020-10-14 06:26:29

emv


Committer: bugmaster Details Diff
0031850: Modeling Algorithms - boolean cut and common generate unexpected result

IntPatch_WLineTool::JoinWLines(): using correct point for the check if WLines may be joined.
Affected Issues
0031850
mod - src/IntPatch/IntPatch_WLineTool.cxx Diff File
add - tests/bugs/modalg_7/bug31850_1 Diff File
add - tests/bugs/modalg_7/bug31850_2 Diff File

Issue History

Date Modified Username Field Change
2020-10-13 18:10 Vico Liang New Issue
2020-10-13 18:10 Vico Liang Assigned To => msv
2020-10-13 18:10 Vico Liang File Added: boolean-common-cut-fails.brep
2020-10-13 18:11 Vico Liang File Added: twoshapes.png
2020-10-13 18:11 Vico Liang File Added: cutresult.png
2020-10-13 18:12 Vico Liang Summary boolean cut and common genrate unexpceted result => boolean cut and common generate unexpceted result
2020-10-13 18:12 Vico Liang Description Updated
2020-10-13 20:55 msv Summary boolean cut and common generate unexpceted result => Modeling Algorithms - boolean cut and common generate unexpected result
2020-10-14 09:24 git Note Added: 0095948
2020-10-14 09:50 Vico Liang Note Added: 0095951
2020-10-14 10:27 kgv Relationship added child of 0029807
2020-10-14 10:42 msv Assigned To msv => emv
2020-10-14 10:42 msv Status new => assigned
2020-10-14 12:59 emv Note Added: 0095970
2020-10-14 12:59 emv Assigned To emv => msv
2020-10-14 12:59 emv Status assigned => resolved
2020-10-14 12:59 emv Steps to Reproduce Updated
2020-10-14 12:59 emv Target Version 7.6.0 => 7.5.0
2020-10-14 15:12 msv Note Added: 0095976
2020-10-14 15:12 msv Assigned To msv => bugmaster
2020-10-14 15:12 msv Status resolved => reviewed
2020-10-17 13:22 bugmaster Note Added: 0096034
2020-10-17 13:22 bugmaster Status reviewed => tested
2020-10-17 13:30 bugmaster Test case number => bugs/modalg_7/bug31850_1,bug31850_2
2020-10-17 13:31 bugmaster Changeset attached => occt master 870ae593
2020-10-17 13:31 bugmaster Status tested => verified
2020-10-17 13:31 bugmaster Resolution open => fixed
2020-10-24 12:41 git Note Added: 0096224
2020-12-02 16:22 emo Fixed in Version => 7.5.0
2020-12-02 17:13 emo Status verified => closed