0031850: Modeling Algorithms - boolean cut and common generate unexpected result

IntPatch_WLineTool::JoinWLines(): using correct point for the check if WLines may be joined.